kubernetes/workloads/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: 'linuxserver/radarr:6.3.0'
          ports:
            - containerPort: 7878
              protocol: TCP
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /movies
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: "150m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "350Mi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr
        - name: movies
          persistentVolumeClaim:
            claimName: movies
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
